# Titan

./: .dockerignore  .gitignore  BAZA.md  CALIBRATION_CONFIG.md  CLAUDE.md  DESIGN.md  Dockerfile  FUSION_QUICKSTART.md  FUSION_SUMMARY.md  HYPERPARAMETER_TUNING_SUMMARY.md  README.md  ROADMAP.md  TITAN_SYSTEM_SPEC.md  ab_test_results.json  ab_test_v2_results.json  bybit_ws_once.py  cleanup.py  context.db-shm  context.db-wal  conversation_context.txt  docker-compose.yml  feature_analysis_report.txt  feature_analysis_results.json  feature_analysis_v2_report.txt  feature_analysis_v2_results.json  project_context.md  requirements-base.txt  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  test_fusion.py  titan.db  titan_session.db
btc_oracle/: .gitignore  README.md  docker-compose.yml  pyproject.toml  titan.py
btc_oracle/config/: default.yaml
btc_oracle/scripts/: download_history.py  pretrain_30d.py  run_live.py
btc_oracle/src/btc_oracle/: __init__.py  app.py  cli.py
btc_oracle/src/btc_oracle/api/: __init__.py  server.py
btc_oracle/src/btc_oracle/core/: clock.py  config.py  log.py  timeframes.py  types.py
btc_oracle/src/btc_oracle/data/: __init__.py  bybit_spot.py  repository.py  store.py
btc_oracle/src/btc_oracle/db/: __init__.py  models.py  session.py
btc_oracle/src/btc_oracle/ensemble/: __init__.py  aggregator.py  inter_model.py  weights.py  (+1 more)
btc_oracle/tests/: __init__.py  conftest.py  test_data_client.py  test_db_roundtrip.py  test_ensemble_uncertainty.py  test_pattern_store_lmdb.py  test_patterns.py  test_policy.py  test_services_smoke.py
(+200 files in other folders)
